# mysql-gui-tools

administrator/: BuildDebug.cmd  BuildRelease.cmd  ChangeLog  MakeSetupCommercial.cmd  MakeSetupGpl.cmd  Makefile.am  MySQLAdministrator.bdsgroup  MySQLAdministrator.desktop.in  PrepareApplicationFolder.cmd  README.MacOSX  SetVersion.cmd  UpdateDocs.cmd  configure.in  extract_pot.sh  mysql-administrator.spec.in  omf.make  xmldocs.make
administrator/images/: Makefile.am
administrator/images/icons/: Makefile.am
administrator/po/: Makefile.in.in  de.po  el_GR.po  ja.po  mysql-administrator-template.po  pl.po  pt_BR.po  update.sh  zh_CN.po
administrator/res/: ChangeLog  FAQ  MakeMo.cmd  Makefile.am  MySQL Administrator command line options.txt  MySQL Administrator features used.txt  backup_profile_example.xml  mysqladmin_health.xml  mysqladmin_startup_variables_description.dtd  mysqladmin_status_variables.xml  mysqladmin_system_variables.xml  mysqlx_translations_administrator.xml  mysqlx_translations_general.xml
administrator/res/linux/: Makefile.am  admin_preferences.glade  backup.glade  backup.gladep  catalogs.glade  catalogs.gladep  health.glade  health.gladep  innodb_data_file.glade  innodb_data_file.gladep  main_window.glade  main_window.gladep  replication_status.glade  replication_status.gladep  restore.glade  restore.gladep  server_connections.glade  server_connections.gladep  server_information.glade  server_information.gladep  server_logs.glade  server_logs.gladep  service_control.glade  service_control.gladep  startup_parameters.glade  startup_parameters.gladep  user_administration.glade  user_administration.gladep
administrator/res/mac/: AdministratorIcon.icns  InfoPlist.strings  locversion.plist
administrator/res/windows/: MySQLAdministrator.rc  make_eventmsgs_dll.cmd  make_resource.cmd  mysqladmin.rc  mysqladmin_eventmsgs.res  mysqlsystemtraymonitor.rc
administrator/setup/windows/: Makefile.mak
administrator/source/: Makefile.am
administrator/source/linux/: MABackupPanel.cc  MABackupPanel.h  MACatalogsPanel.cc  MACatalogsPanel.h  MADummyPanel.cc  MADummyPanel.h  MAHealthPanel.cc  MAHealthPanel.h  MAPanel.cc  MAPanel.h  MAPreferences.cc  MAPreferences.h  MAPreferencesEditor.cc  MAPreferencesEditor.h  MAReplicationStatusPanel.cc  MAReplicationStatusPanel.h  MARestorePanel.cc  MARestorePanel.h  MAServerConnectionsPanel.cc  MAServerConnectionsPanel.h  MAServerInformationPanel.cc  MAServerInformationPanel.h  MAServerLogsPanel.cc  MAServerLogsPanel.h  MAServiceControlPanel.cc  MAServiceControlPanel.h  MAStartupParametersPanel.cc  MAStartupParametersPanel.h  MAUserAdministrationPanel.cc  MAUserAdministrationPanel.h  MAdministrator.cc  MAdministrator.h  MDataInterface.cc  MDataInterface.h  MDynamicInterface.cc  MDynamicInterface.h  MGUserBrowserList.cc  MGUserBrowserList.h  MInstanceInfo.cc  MInstanceInfo.h  (+11 more)
administrator/source/mac/: Info.plist  MABackup.h  MABackup.m  MACatalogs.h  MACatalogs.m  MADataFileEditor.h  MADataFileEditor.m  MADataFileView.h  MADataFileView.m  MAFileTextField.h  MAFileTextField.m  MAGraphEditor.h  MAGraphEditor.m  MAHealth.h  MAHealth.m  MAHealthGraph.h  MAHealthGraph.m  MAHealthPage.h  MAHealthPage.m  MAHomePanel.h  MAHomePanel.m  MAMenuContextView.h  MAMenuContextView.m  MAPanel.h  MAPanel.m  MARestore.h  MARestore.m  MAServerConnections.h  MAServerConnections.m  MAServerInformation.h  MAServerInformation.m  MAServerLogView.h  MAServerLogView.m  MAServerLogs.h  MAServerLogs.m  MAServiceControl.h  MAServiceControl.m  MAStartupVariables.h  MAStartupVariables.m  MATableMaintenanceController.h  (+25 more)
administrator/source/util/: Makefile.am  mabackup.cc
administrator/source/windows/: AdditionalClasses.pas  AdminBackup.dfm  AdminBackup.pas  AdminBackupProgress.dfm  AdminBackupProgress.pas  AdminCatalog.dfm  AdminCatalog.pas  AdminCatalogTableCheck.dfm  AdminCatalogTableCheck.pas  AdminOptionPages.dfm  AdminOptionPages.pas  AdminReplication.dfm  AdminReplication.pas  AdminRestore.dfm  AdminRestore.pas  AdminRestoreProgress.dfm  AdminRestoreProgress.pas  AdminServerConnections.dfm  AdminServerConnections.pas  AdminServerHealth.dfm  AdminServerHealth.pas  AdminServerHealthBarGraph.dfm  AdminServerHealthBarGraph.pas  AdminServerHealthGraphSettings.dfm  AdminServerHealthGraphSettings.pas  AdminServerHealthLineGraph.dfm  AdminServerHealthLineGraph.pas  AdminServerInfo.dfm  AdminServerInfo.pas  AdminServerLogs.dfm  AdminServerLogs.pas  AdminServerProcesses.dfm  AdminServerProcesses.pas  AdminServerStatus.dfm  AdminServerStatus.pas  AdminService.pas  AdminServiceControl.dfm  AdminServiceControl.pas  AdminStartupVariables.dfm  AdminStartupVariables.pas  (+20 more)
administrator/testing/: Edit UI Tests.cmd  Run UI Tests.cmd
common/: BuildDebug.cmd  BuildRelease.cmd  ChangeLog  Common.bdsgroup  MakeCommercialSetup.cmd  MakeFullReleaseBuild.cmd  MakeGplSetup.cmd  Makefile.am  README  README.translating  RunTests.cmd  autogen.sh  confdefs.h  config.h.in  configure.in  configure_osx  extract_pot.sh  grt_config.in  mkjava.sh  setversion.cmd  tagrepo
common/images/: Makefile.am  progress_indicator.avi
common/po/: Makefile.in.in  de.po  el_GR.po  ja.po  mysql-gui-common-template.po  pl.po  pt_BR.po  update.sh  zh_CN.po
common/res/: Iconv_charsets.txt  Makefile.am  MySQL GUI licence.rtf  MySQL GUI licence.txt  MySQLEULA.rtf  MySQLEULA.txt  how_to_translate.txt  languages_list.txt  mysqlx_dbm_charsets.xml  mysqlx_dbm_datatypes.xml
common/source/: Makefile.am
common/tools/: Makefile.am
query-browser/: BuildDebug.cmd  BuildRelease.cmd  Makefile.am  MySQLQueryBrowser.bdsgroup  MySQLQueryBrowser.desktop.in  PrepareApplicationFolder.cmd  README  configure.in  mysql-query-browser.spec.in  setversion.cmd
query-browser/images/: Makefile.am
query-browser/po/: de.po  el_GR.po  mysql-query-browser-template.po  pl.po  pt_BR.po  update.sh  zh_CN.po
query-browser/res/: ChangeLog  Create Test Database.sql  MakeMo.cmd  Makefile.am  dolphin_loop.avi  mysqlqb_bookmark_sample.xml  mysqlqb_history_sample.xml
query-browser/source/: Makefile.am
(+1556 files in other folders)
