SUBDIRS=linux 

mysqladmindatadir= $(madatadir)

mysqladmindata_DATA=\
	mysqladmin_health.xml\
	mysqladmin_status_variables.xml\
	mysqladmin_system_variables.xml\
	mysqlx_translations_administrator.xml\
	mysqlx_translations_general.xml\
	mysqladmin_startup_variables_description.dtd\
	mysqladmin_startup_variables_description.xml

EXTRA_DIR=$(mysqladmindata_DATA)
