
if BUILD_GRT
SUBDIRS=linux grt 
else
SUBDIRS=linux
endif


                                                                                            
commondatadir= $(mydatadir)
                                                                                            
commondata_DATA=\
	how_to_translate.txt\
	mysqlx_dbm_charsets.xml\
	mysqlx_dbm_datatypes.xml
                                                                                            
EXTRA_DIR=$(commondata_DATA)

