
mysqladmindatadir= $(madatadir)

mysqladmindata_DATA=\
	admin_preferences.glade\
	backup.glade\
	restore.glade\
	catalogs.glade\
	health.glade\
	main_window.glade\
	replication_status.glade\
	server_connections.glade\
	server_information.glade\
	server_logs.glade\
	service_control.glade\
	startup_parameters.glade\
	user_administration.glade\
	innodb_data_file.glade

EXTRA_DIR=$(mysqladmindata_DATA)

