
commondatadir= $(mydatadir)

commondata_DATA=\
	16x16_Catalog.png\
	16x16_Database.png\
	16x16_Field.png\
	16x16_KeyColumn.png\
	16x16_Table.png\
	16x16_User.png\
	16x16_Users.png\
	blob_icon.png\
	busy.png\
	dockpnl_bg_logo.png\
	dockpnl_bg.png\
	edit_disabled.png\
	edit_enabled.png\
	editor_table_auto_inc.png\
	editor_table_not_null.png\
	field_overlay_clear.png\
	field_overlay_edit.png\
	field_overlay_load.png\
	field_overlay_null.png\
	field_overlay_save.png\
	field_overlay_view.png\
	folder_16x16.png\
	mini_error.png\
	mini_notice.png\
	mini_warning.png\
	mysql_logo.png\
	networkhost_16x16.png\
	options_bg.png\
	sakila.png\
	sizer_h_left.png\
	sizer_h_right.png\
	source_dbconn.png\
	statusbar_clear.png\
	spin1.png\
	spin2.png\
	spin3.png\
	spin4.png\
	tab_close_normal.png\
	tab_close_over.png\
	tab_close.png\
	tab_close_pressed.png\
	tab_list.png\
	tab_new.png\
	tabsheet_icon_close2.png\
	tabsheet_icon_close.png\
	target_dbconn.png\
	task_checked.png\
	task_disabled.png\
	task_error.png\
	task_unchecked.png\
	tree_button_box.png\
	tree_button_closed.png\
	tree_button_open.png\
	xgrtsh_about.png
