

commondatadir= $(mydatadir)/grt
 
commondata_DATA=\
	layout.figures.db.xml\
	layout.styles.db.connection.xml\
	layout.styles.db.routine.xml\
	layout.styles.db.table.tmpl.xml\
	layout.styles.db.table.xml\
	layout.styles.db.view.tmpl.xml\
	layout.styles.db.view.xml\
	layout.styles.db.xml\
	layout.styles.image.tmpl.xml\
	layout.styles.layer.tmpl.xml\
	layout.styles.note.tmpl.xml\
	structs.base.xml\
	structs.canvas.xml\
	structs.db.maxdb.xml\
	structs.db.mgmt.xml\
	structs.db.migration.xml\
	structs.db.mssql.xml\
	structs.db.sybase.xml\
	structs.db.mysql.xml\
	structs.db.oracle.xml\
	structs.db.workbench.xml\
	structs.db.xml\
	structs.forms.xml\
	structs.model.xml\
	structs.xml

