

commondatadir= $(mydatadir)/php

commondata_DATA=\
	Grt.php \
	GrtCallback.php \
	GrtCallbackNative.php \
	GrtCallbackTest.php \
	GrtHashMap.php \
	GrtInit.php \
	GrtIntList.php \
	GrtList.php \
	GrtMessage.php \
	GrtObject.php \
	GrtObjectData.php \
	GrtObjectDataGlobal.php \
	GrtObjectDataLocal.php \
	GrtObjectList.php \
	GrtRealList.php \
	GrtStringHashMap.php \
	GrtStringList.php \
	GrtTest.php \
	GrtXml.php







