mqbdatadir=$(qbdatadir)

mqbdata_DATA=\
	label_extra_disabled.png\
	label_extra.png\
	query_back_down.png\
	query_back.png\
	query_execute_down.png\
	query_execute.png\
	query_next_down.png\
	query_next.png\
	query_refresh_down.png\
	query_refresh.png\
	query_stop_down.png\
	query_stop.png\
	script_continue_down.png\
	script_continue.png\
	script_execute_down.png\
	script_execute.png\
	script_load_down.png\
	script_load.png\
	script_redo_down.png\
	script_redo.png\
	script_restart_down.png\
	script_restart.png\
	script_save_down.png\
	script_save.png\
	script_search_down.png\
	script_search.png\
	script_step_into_down.png\
	script_step_into.png\
	script_step_over_down.png\
	script_step_over.png\
	script_step_return_down.png\
	script_step_return.png\
	script_stop_down.png\
	script_stop.png\
	script_undo_down.png\
	script_undo.png\
	small_query_back_down.png\
	small_query_back.png\
	small_query_commit_down.png\
	small_query_commit.png\
	small_query_compare_down.png\
	small_query_compare.png\
	small_query_execute_down.png\
	small_query_execute.png\
	small_query_explain_down.png\
	small_query_explain.png\
	small_query_next_down.png\
	small_query_next.png\
	small_query_refresh_down.png\
	small_query_refresh.png\
	small_query_rollback_down.png\
	small_query_rollback.png\
	small_query_start_down.png\
	small_query_start.png\
	small_query_stop_down.png\
	small_query_stop.png\
	small_script_continue_down.png\
	small_script_continue.png\
	small_script_execute_down.png\
	small_script_execute.png\
	small_script_load_down.png\
	small_script_load.png\
	small_script_redo_down.png\
	small_script_redo.png\
	small_script_restart_down.png\
	small_script_restart.png\
	small_script_save_down.png\
	small_script_save.png\
	small_script_search_down.png\
	small_script_search.png\
	small_script_step_into_down.png\
	small_script_step_into.png\
	small_script_step_over_down.png\
	small_script_step_over.png\
	small_script_step_return_down.png\
	small_script_step_return.png\
	small_script_stop_down.png\
	small_script_stop.png\
	small_script_undo_down.png\
	small_script_undo.png\
	toolbar_bg1.png\
	toolbar_bg2.png
