

SUBDIRS=maintree sections

appdatadir= $(madatadir)

appdata_DATA=\
	service_status_paused.png\
	service_status_stopped.png\
	service_status_running.png\
	service_pause.png\
	service_stop.png\
	service_start.png\
	16x16_error.png\
	16x16_start.png\
	16x16_warning.png\
	option_checked.xpm\
	option_checked_light.xpm\
	option_crossed.xpm\
	option_unchecked.xpm\
	variable.png\
	variable_editable.png\
	variable_disabled.png


