
commondatadir= $(mydatadir)/grt/icons/structs

commondata_DATA=\
	db.Routine.16x16.png\
	db.Routine.24x24.png\
	db.Routine.64x64.png\
	db.Routine.many_32x32.png\
	db.Schema.16x16.png\
	db.Schema.24x24.png\
	db.Schema.many_32x32.png\
	db.Table.16x16.png\
	db.Table.24x24.png\
	db.Table.many_32x32.png\
	db.View.16x16.png\
	db.View.24x24.png\
	db.View.64x64.png\
	db.View.many_32x32.png\
	db.workbench.Layer.16x16.png\
	db.workbench.RoutinesElement.16x16.png\
	db.workbench.TableElement.16x16.png\
	db.workbench.ViewElement.16x16.png\
	GrtObject.16x16.png\
	GrtObject.24x24.png\
	GrtObject.many_32x32.png
