

commondatadir= $(mydatadir)

commondata_DATA=\
	asset_index_16x16.png\
	asset_index.png\
	asset_table_16x16.png\
	asset_table.png\
	checkmark.png\
	column_11x11.png\
	column_fk_11x11.png\
	column_fk.png\
	column_pk_11x11.png\
	column_pk.png\
	column.png\
	connect_to_instance.png\
	datatype_blob.png\
	datatype_datetime.png\
	datatype_numeric.png\
	datatype_spatial.png\
	datatype_string.png\
	datatype_userdefined.png\
	magnify_glass.png\
	magnify_glass_with_popup.png\
	messagedlg_confirmation.png\
	messagedlg_edit.png\
	messagedlg_error.png\
	messagedlg_information.png\
	messagedlg_warning.png\
	mini_add_12.png\
	mini_add.png\
	mini_add_pressed_12.png\
	mini_add_pressed.png\
	mini_del_12.png\
	mini_del.png\
	mini_del_pressed_12.png\
	mini_del_pressed.png\
	minus.png\
	myx_schema_16x16.png\
	myx_schema_sp_16x16.png\
	myx_schema_table_16x16.png\
	myx_schema_view_16x16.png\
	options_admin.png\
	options_bg.png\
	options_checkbox_checked.png\
	options_checkbox.png\
	options_checkbox_xed.png\
	options_connections.png\
	options_editors.png\
	options_general.png\
	options_querybrowser.png\
	plus.png\
	schema_32x32.png\
	thread_stop.png\
	user_icon.png

EXTRA_DIR=$(commondata_DATA)

