
mqbdatadir=$(qbdatadir)
                                                                                
mqbdata_DATA=\
	bookmark_14x14.png\
	folder_closed_14x14.png\
	folder_open_14x14.png\
	function_14x14.png\
	history_interval_14x14.png\
	param_14x14.png\
	query_14x14.png\
	syntax_14x14.png

